Store token in TokenC

--- a/AdminPortal/Views/Account/Index.cshtml
+++ b/AdminPortal/Views/Account/Index.cshtml
@@ -2,7 +2,8 @@
   Layout = "_Layout";
 }
 
-@if (ViewBag.Response != null)
+@if (ViewBag.Token != null)
 {
-  <p>@ViewBag.Response</p>
+  <p>@ViewBag.Token</p>
+  <p>@ViewBag.RefreshToken</p>
 }
