--- a/AdminPortal/Views/Teams/Create.cshtml
+++ b/AdminPortal/Views/Teams/Create.cshtml
@@ -1,15 +1,14 @@
 @{
   Layout = "_Layout";
 }
-@using AdminPortal.Models
+
 @model AdminPortal.Models.Team
 
-<h3>Edit this Team: @Html.DisplayFor(model => model.Name)</h3>
+<h4>Add a New Team</h4>
 
 @using (Html.BeginForm())
 {
-  @Html.HiddenFor(model => model.TeamId)
-  <div>
+   <div>
     @Html.LabelFor(model => model.TeamId)
     @Html.TextBoxFor(model => model.TeamId)
   </div>
@@ -30,8 +29,7 @@
     @Html.TextBoxFor(model => model.PlayerId)
   </div>
 
-  <input type="submit" value="Save" />
+  <input type="submit" value="Add New Team" class="btn btn-dark" />
 }
-<hr />
 
-<p>@Html.ActionLink("Back", "Details", new { id = Model.TeamId })</p>
+<p>@Html.ActionLink("List of Teams", "Index")</p>
