--- a/AdminPortal/Views/Teams/Index.cshtml
+++ b/AdminPortal/Views/Teams/Index.cshtml
@@ -2,19 +2,24 @@
   Layout = "_Layout";
 }
 
-<h1>All Teams:</h1>
-
+<h2>List of All Teams</h2>
+<hr />
+<p>@Html.ActionLink("Create Team", "Create")</p>
+<hr />
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<hr />
 <ol>
-@foreach (Team team in Model)
-{
+  @foreach (Team team in Model)
+  {
     <ul>
-        <li>ID: @team.TeamId</li>
-        <li>Name: @team.Name</li>
-        <li>Wins: @team.Wins</li>
-        <li>Losses: @team.Losses</li>
-        <li>Player: @team.PlayerId</li>
+      <li>Team Id: @team.TeamId</li>
+      <li>Name: @team.Name</li>
+      <li>Wins: @team.Wins</li>
+      <li>Losses: @team.Losses</li>
+      <li>Player Id: @team.PlayerId</li>
     </ul>
-    <a href="/Teams/Details/@(team.TeamId)"><p>View Details</p></a>
-    <br>
-}
+    <a href="/Teams/Details/@(team.TeamId)">
+      <p>View Details</p>
+    </a>
+  }
 </ol>
