updates actionlinks to redirect to account index

--- a/AdminPortal/Views/Animals/Details.cshtml
+++ b/AdminPortal/Views/Animals/Details.cshtml
@@ -16,4 +16,4 @@
 <p>@Html.ActionLink("Delete", "Delete", new { id = Model.AnimalId })</p>
 <hr />
 <p>@Html.ActionLink("Animals List", "Index")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<p>@Html.ActionLink("Home", "Index", "Account")</p>
