--- a/AdminPortal/Views/Teams/Details.cshtml
+++ b/AdminPortal/Views/Teams/Details.cshtml
@@ -16,5 +16,5 @@
 <p>@Html.ActionLink("Delete", "Delete", new { id = Model.TeamId })</p>
 <hr />
 <p>@Html.ActionLink("Teams List", "Index")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<p>@Html.ActionLink("Home", "Index", "Account")</p>
 
