--- a/AdminPortal/Views/Teams/Index.cshtml
+++ b/AdminPortal/Views/Teams/Index.cshtml
@@ -6,7 +6,7 @@
 <hr />
 <p>@Html.ActionLink("Create Team", "Create")</p>
 <hr />
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+<p>@Html.ActionLink("Home", "Index", "Account")</p>
 <hr />
 <ol>
   @foreach (Team team in Model)
