--- a/AdminPortal/Views/Account/Login.cshtml
+++ b/AdminPortal/Views/Account/Login.cshtml
@@ -20,5 +20,5 @@
 }
 
 <hr />
-<p>@Html.ActionLink("Register", "Register")</p>
+<p>@Html.ActionLink("Register", "Login")</p>
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
