--- a/AdminPortal/Views/Teams/Details.cshtml
+++ b/AdminPortal/Views/Teams/Details.cshtml
@@ -10,6 +10,23 @@
 <p>Name: @Model.Name</p>
 <p>Wins: @Model.Wins</p>
 <p>Losses: @Model.Losses</p>
+<hr />
+
+<h5>Animals part of @Model.Name</h5>
+<div class="mb-3">
+  <ul>
+    @foreach (KeyValuePair<int, Animal> entry in ViewBag.AnimalsInTeam)
+    {
+      <li>
+        @entry.Value.Name:
+        HP: @entry.Value.HP
+        Attack: @entry.Value.Attack
+      </li>
+    }
+  </ul>
+</div>
+<hr />
+
 
 <hr />
 <p>@Html.ActionLink("Edit", "Edit", new { id = Model.TeamId })</p>
