Add battle test page

--- a/AdminPortal/Views/Teams/Details.cshtml
+++ b/AdminPortal/Views/Teams/Details.cshtml
@@ -25,12 +25,11 @@
     }
   </ul>
 </div>
-<hr />
-
 
 <hr />
 <p>@Html.ActionLink("Edit", "Edit", new { id = Model.TeamId })</p>
 <p>@Html.ActionLink("Delete", "Delete", new { id = Model.TeamId })</p>
+<p>@Html.ActionLink("Test Battle", "Battle", new { id = Model.TeamId })</p>
 <hr />
 <p>@Html.ActionLink("Teams List", "Index")</p>
 <p>@Html.ActionLink("Home", "Index", "Account")</p>
