--- a/AdminPortal/Views/Teams/Edit.cshtml
+++ b/AdminPortal/Views/Teams/Edit.cshtml
@@ -25,6 +25,10 @@
     @Html.LabelFor(model => model.Losses)
     @Html.TextBoxFor(model => model.Losses)
   </div>
+  <div>
+    @Html.LabelFor(model => model.UserId)
+    @Html.TextBoxFor(model => model.UserId)
+  </div>
 
   <input type="submit" value="Save" />
 }
